--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lodash.set": "^4.3.2",
     "mime-types": "^2.1.27",
     "pg": "^8.7.3",
-    "pg-connection-string": "^2.5.0"
+    "pg-connection-string": "^2.5.0",
+    "strapi-plugin-import-export-entries": "^1.6.0"
   },
   "name": "backend",
   "private": true,
