--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mime-types": "^2.1.27",
     "pg": "^8.7.3",
     "pg-connection-string": "^2.5.0",
+    "strapi-plugin-config-sync": "^1.0.3",
     "strapi-plugin-import-export-entries": "^1.6.0"
   },
   "name": "backend",
