--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "dependencies": {
-    "@strapi/plugin-graphql": "^4.0.0",
-    "@strapi/plugin-i18n": "4.1.9",
-    "@strapi/plugin-users-permissions": "4.1.9",
-    "@strapi/provider-upload-aws-s3": "^4.1.9",
-    "@strapi/strapi": "4.1.9",
-    "better-sqlite3": "7.4.6",
+    "@strapi/plugin-i18n": "^4.5.2",
+    "@strapi/plugin-users-permissions": "^4.5.2",
+    "@strapi/provider-upload-aws-s3": "^4.5.2",
+    "@strapi/strapi": "^4.5.2",
+    "better-sqlite3": "^8.0.0",
     "lodash.set": "^4.3.2",
     "mime-types": "^2.1.27",
     "pg": "^8.7.3",
     "pg-connection-string": "^2.5.0",
-    "strapi-plugin-config-sync": "^1.0.3",
-    "strapi-plugin-import-export-entries": "^1.6.0"
+    "strapi-plugin-config-sync": "^1.0.4",
+    "strapi-plugin-import-export-entries": "^1.18.0"
   },
-  "name": "backend",
+  "name": "reframe-strapi",
   "private": true,
   "version": "0.1.0",
-  "description": "A Strapi application",
+  "description": "Strapi backend for Reframe website",
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
@@ -24,15 +23,12 @@
     "strapi": "strapi"
   },
   "devDependencies": {},
-  "author": {
-    "name": "A Strapi developer"
-  },
   "strapi": {
     "uuid": "a3d9ccbd-7422-4d86-a768-d413dbbe6eb6",
     "template": "@strapi/template-blog@1.0.0"
   },
   "engines": {
-    "node": ">=12.x.x <=16.x.x",
+    "node": ">=16.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
